--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="KMS激活服务器,windows激活工具,windows激活教程,win10激活工具,Server2022激活,win11激活,win10激活,win8激活工具,win7激活工具,office2022激活,office2019激活工具,office365激活教程,office激活工具,系统激活教程,v0v.bid,微零微">
-<meta name="description" content="[微零微]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活">
+<meta name="description" content="[IKMS]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活">
 <title>[微零微]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活</title>
-<link rel="shortcut icon" href="/web/20240326065939im_/https://www.v0v.bid/img/favicon.ico">
-<link rel="bookmark" href="/img/favicon.ico">
+<link rel="shortcut icon" href="/img/windows.svg">
+<link rel="bookmark" href="/img/windows.svg">
 <style>
 h1 {font-size:3em;line-height:1em;}
 h4 {font-size:1.2em;font-weight:bold;}
@@ -36,15 +36,15 @@ sup {font-size:0.5em;color:#00AEED;}
 <h1>Windows系统一句命令激活<sup>[永久]</sup></h1>
 </div>
 <div style="margin-top:2em;margin-bottom:2em;">
-<h3>命令提示符(管理员)：<span id="copy">slmgr /skms kms.v0v.bid &amp;&amp; slmgr /ato</span></h3>
+<h3>命令提示符(管理员)：<span id="copy">slmgr /skms ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
 </div>
-<img src="/web/20240326065939im_/https://www.v0v.bid/img/dashang.jpg" width="100em">
+<img src="/img/logo.png" width="200em">
 <div style="line-height:0.5em;">
 <p>域名快到期了，再续10年的。求打赏</p>
 </div>
 <div style="line-height:2.2em;">
 <p>
-<a href="./kms.php">详细教程</a>&nbsp;&nbsp;<a href="./img.php">演示图例</a>&nbsp;&nbsp;<a href="./more.php">备用线路</a>&nbsp;&nbsp;<a href="./android.php">自建线路</a></p>
+<a href="./kms.html">详细教程</a><!--&nbsp;&nbsp;<a href="./img.php">演示图例</a>&nbsp;&nbsp;<a href="./more.php">备用线路</a>&nbsp;&nbsp;<a href="./android.php">自建线路</a>--></p>
 </div>
 </td>
 </tr>
