--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ sup {font-size:0.5em;color:#00AEED;}
 </div>
 <img src="/img/logo.png" width="200em">
 <div style="line-height:0.5em;">
-<p>域名快到期了，再续10年的。求打赏</p>
+<p>微零微貌似挂了，所以仿了一个应急。</p>
 </div>
 <div style="line-height:2.2em;">
 <p>
