--- a/kms.html
+++ b/kms.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="KMS激活服务器,windows激活工具,windows激活教程,win10激活工具,Server2022激活,win11激活,win10激活,win8激活工具,win7激活工具,office2022激活,office2019激活工具,office365激活教程,office激活工具,系统激活教程,v0v.bid,微零微">
 <meta name="description" content="[IKMS]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活">
-<title>[微零微]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活</title>
+<title>[IKMS]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活</title>
 <link rel="shortcut icon" href="/img/windows.svg">
 <link rel="bookmark" href="/img/windows.svg">
 <style>
