--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <div style="margin-top:2em;margin-bottom:2em;">
 <h3>命令提示符(管理员)：<span id="copy" style="color:red">slmgr /skms ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
 </div>
-<img src="/img/logo.png" width="400em">
+<img src="/img/logo.webp" width="200em">
 <div style="line-height:0.5em;">
 <p>微零微貌似挂了，所以仿了一个应急。</p>
 </div>
