--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <h1>Windows系统一句命令激活<sup>[永久]</sup></h1>
 </div>
 <div style="margin-top:2em;margin-bottom:2em;">
-<h3>命令提示符(管理员)：<span id="copy" style="color:red">slmgr /skms ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
+<h3>命令提示符(管理员)：<span id="copy" style="color:red">slmgr /skms s.ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
 </div>
 <img src="/img/logo.webp" width="200em">
 <div style="line-height:0.5em;">
