--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ sup {font-size:0.5em;color:#00AEED;}
 </div>
 <img src="/img/logo.webp" width="200em">
 <div style="line-height:0.5em;">
-<p>微零微貌似挂了，所以仿了一个应急。</p>
+<p>微零微貌似挂了，所以仿了一个应急。<br/></p>
 </div>
-<div style="line-height:2.2em;">
+<div style="line-height:2.5em;">
 <p>
 <a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<!--<a href="./more.php">备用线路</a>&nbsp;&nbsp;--><a href="./android.html">自建线路</a></p>
 </div>
