--- a/android.html
+++ b/android.html
@@ -32,7 +32,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <p>Linux / Windows 系统自建KMS服务器请访问：</p>
 <p>https://github.com/dylanbai8/kmspro</p>
 <p>
-<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
+<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
 </p>
 </td>
 </tr>
