--- a/img.html
+++ b/img.html
@@ -16,25 +16,14 @@ a {color:#00AEED;}
 sup {font-size:0.5em;color:#00AEED;}
 * {font-family:"Microsoft Yahei";font-weight:lighter;text-decoration:none;}
 </style>
-<script type="text/javascript">
-    $(function(){
-        $("span").on("click", function(){
-            var selection = window.getSelection();        
-            selection.removeAllRanges();
-            var range = document.createRange();
-            range.selectNodeContents(document.getElementById($(this).attr('id'))); //span需要设置id
-            selection.addRange(range);
-        })
-    })
-</script>
 </head>
 <body style="text-align: center;">
 <table cellspacing="0" cellpadding="0">
 <tr>
-<td>
-<img src="./img/kms.png" width="70%"/>
+<td style="padding-top:5px">
+<img src="./img/kms.webp" width="80%"/>
 <p>
-<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
+<br/><a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
 </p>
 </td>
 </tr>
