--- a/img.html
+++ b/img.html
@@ -21,8 +21,8 @@ sup {font-size:0.5em;color:#00AEED;}
 <table cellspacing="0" cellpadding="0">
 <tr>
 <td>
-<img  style="padding-top:5px" src="./img/kms.webp" width="80%"/>
-<p style="padding-top:5px">
+<img style="margin-top:5px" src="./img/kms.webp" width="70%"/>
+<p>
 <a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
 </p>
 </td>
