--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ sup {font-size:0.5em;color:#00AEED;}
 </div>
 <div style="line-height:2.5em;">
 <p>
-<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a></p>
+<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./status.html">服务器状态</a></p>
 </div>
 </td>
 </tr>
