--- a/status.html
+++ b/status.html
@@ -29,17 +29,23 @@ sup {font-size:0.5em;color:#00AEED;}
 </script>
 </head>
 <body style="text-align: center;">
-<style type="text/css">
-	/* 
-		推荐使用css设置iframe的样式，因为height设置成100%会失效，
-		而这时就要用到vh单位，但是iframe标签不支持，css可以。 
-	*/
-	.css{
-		width: 100%;
-		height: 100vh;	/* 视口的100%高度 */
-		border: 0;		/* 把他自带的边框去掉，不然会有违和感 */
-	}
-</style>
-<iframe src="https://up.love2wind.com/status/kms" class="css" ></iframe>
+<table cellspacing="0" cellpadding="0">
+<tbody>
+<tr>
+<td>
+<h1>KMS服务器状态监控</h1>
+<br>
+<h4>KMS服务器：s.ikms.eu.org </h4>
+<p>https://up.love2wind.com/api/badge/59/status?style=for-the-badge</p>
+<p><a href="https://up.love2wind.com/status/kms">查看KMS服务器运行详情</a></p>
+<br>	
+<div style="line-height:2.5em;">
+<p>
+<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
