--- a/more.html
+++ b/more.html
@@ -58,7 +58,7 @@ sup {font-size:0.5em;color:#00AEED;}
 
 <div style="line-height:2.2em;">
 <p>
-<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
+<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./status.html">服务器状态</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
 </div>
 </td>
 </tr>
