--- a/status.html
+++ b/status.html
@@ -36,7 +36,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <h1>KMS服务器状态监控</h1>
 <br>
 <h4>KMS服务器：s.ikms.eu.org </h4>
-<p>https://up.love2wind.com/api/badge/59/status?style=for-the-badge</p>
+<p><img src="https://up.love2wind.com/api/badge/59/status?style=for-the-badge"></p>
 <p><a href="https://up.love2wind.com/status/kms">查看KMS服务器运行详情</a></p>
 <br>	
 <div style="line-height:2.5em;">
