--- a/more.html
+++ b/more.html
@@ -22,7 +22,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <tbody><tr>
 <td>
 
-<p></p><h3 style="line-height:1.2em;font-weight:bold;">本站永久地址：https://ikms.eu.org</h3><p></p>
+<p></p><h3 style="line-height:1.2em;font-weight:bold;font-size:2em;">本站永久地址：https://ikms.eu.org</h3><p></p>
 
 <div style="line-height:1.2em;">
 
