--- a/img.html
+++ b/img.html
@@ -23,7 +23,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <td>
 <img style="margin-top:5px" src="./img/kms.webp" width="70%"/>
 <p>
-<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
+<a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./status.html">服务器状态</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
 </p>
 </td>
 </tr>
