--- a/more.html
+++ b/more.html
@@ -65,7 +65,7 @@ sup {font-size:0.5em;color:#00AEED;}
 
 </div>
 
-<p></p><h3 style="line-height:1.2em;">请注意：备用线路仅作为应急使用 由热心企业或网友<a href="https://github.com/dylanbai8/kmspro/issues/4" target="_blank">投稿</a>并维护 不能保证随时可用</h3><p></p>
+<p></p><h3 style="line-height:1.2em;">请注意：备用线路仅作为应急使用 由热心企业或网友<a href="https://github.com/iougemini/iougemini.github.io/issues/1" target="_blank">投稿</a>并维护 不能保证随时可用</h3><p></p>
 
 <div style="line-height:2.2em;">
 <p>
