--- a/status.html
+++ b/status.html
@@ -36,7 +36,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <h1 style="font-weight:bold;">KMS服务器状态监控</h1>
 <br>
 <h2 style="font-size:2em;">KMS服务器：s.ikms.eu.org </h2>
-<p><a href="https://up.love2wind.com/status/kms"><img src="https://up.love2wind.com/api/badge/59/status?style=for-the-badge"></a></p>
+<p><a target="_blank" href="https://up.love2wind.com/status/kms"><img src="https://up.love2wind.com/api/badge/59/status?style=for-the-badge"></a></p>
 <p>点击图标查看全部KMS服务器运行状态</p>
 <br>	
 <div style="line-height:2.5em;">
