--- a/status.html
+++ b/status.html
@@ -35,11 +35,11 @@ sup {font-size:0.5em;color:#00AEED;}
 <td>
 <h1 style="font-weight:bold;">KMS服务器状态监控</h1>
 <br>
-<h2 style="font-size:2em;">主KMS服务器：s.ikms.eu.org </h2>
-<p><a target="_blank" href="https://up.ikms.eu.org"><img src="https://up.love2wind.com/api/badge/59/status?style=for-the-badge"></a></p>
-<p>点击图标查看全部KMS服务器运行状态</p>
-<br>	
-<h4><a href="https://t.me/ikmsuptime">加入IKMS服务器监控Telegram频道：ikmsuptime</a></h4>
+<h2 style="font-size:1.6em;">主KMS服务器：s.ikms.eu.org </h2>
+<p style="font-size:0.9em;color: #444444;"><a target="_blank" href="https://up.ikms.eu.org"><img src="https://up.love2wind.com/api/badge/59/status?style=for-the-badge"></a><br>点击图标查看全部KMS服务器运行状态</p>
+<p style="font-size:0.9em;color: #444444;"><a target="_blank" href="https://t.me/ikmsuptime"><img src="https://img.shields.io/badge/Telegram-ikmsuptime-1ca0f1?style=for-the-badge&logo=telegram"></a><br>加入IKMS服务器监控Telegram频道</p>
+<p style="font-size:0.9em;color: #444444;"><a target="_blank" href="http://rss.uptimerobot.com/u2545766-f946e514d5384ec8b1cf9fcfcc945be7"><img src="https://img.shields.io/badge/RSS-ikmsrss-orange?style=for-the-badge&logo=rss"></a><br>点击订阅IKMS服务器运行状态RSS</p>
+	
 <div style="line-height:2.5em;">
 <p>
 <a href="./kms.html">详细教程</a>&nbsp;&nbsp;<a href="./img.html">演示图例</a>&nbsp;&nbsp;<a href="./more.html">备用线路</a>&nbsp;&nbsp;<a href="./android.html">自建线路</a>&nbsp;&nbsp;<a href="./">返回首页</a></p>
