--- a/kms.html
+++ b/kms.html
@@ -1223,5 +1223,6 @@ https://learn.microsoft.com/zh-cn/windows-server/get-started/activation-slmgr-vb
 </td>
 </tr>
 </tbody></table>
+<script defer src="https://umi.love2wind.com/niegeumami" data-website-id="5eb46560-0399-4c74-8669-4239364c832c"></script>
 </body>
 </html>
