--- a/android.html
+++ b/android.html
@@ -37,5 +37,6 @@ sup {font-size:0.5em;color:#00AEED;}
 </td>
 </tr>
 </table>
+<script defer src="https://umi.love2wind.com/niegeumami" data-website-id="5eb46560-0399-4c74-8669-4239364c832c"></script>
 </body>
 </html>
