--- a/docker/index.html
+++ b/docker/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -9,13 +8,13 @@
 <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            line-height: 1.3;
+            line-height: 1.2;
             color: #000;
             margin: 0;
             padding: 30px;
         }
         .container {
-            max-width: 960px;
+            max-width: 1080px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -70,11 +69,11 @@
         }
         .custom-button {
             display: inline-block;
-            padding: 0 20px;
+            padding: 0 10px;
             color: #919ca7;
             text-align: center;
             text-decoration: none;
-            font-size: 15px;
+            font-size: 14px;
             font-weight: 900;
             cursor: pointer;
         }
@@ -103,7 +102,7 @@ docker pull library/alpine:latest</code><button class="copy-button" onclick="cop
 <h4 style="font-weight: 400;">加速拉取镜像命令：</h4>
 <pre><code>
 docker pull docker.anyhub.us.kg/library/alpine:latest</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
-<center style="margin-top: 2rem;"><a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.niege.us.kg" class="custom-button">GITHUB PROXY</a></center>
+<center style="margin-top: 2rem;"><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.niege.us.kg" class="custom-button">GITHUB PROXY</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE LINUX.DO</a></center>
 </div>
 <script>
         function copyCode(button) {
