--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ sup {font-size:0.5em;color:#00AEED;}
 <h3>命令提示符(管理员)：<span id="copy" style="color:red">slmgr /skms s.ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
 </div>
 <img src="/img/logo.webp" width="200em">
-<div style="line-height:0.5em;">
-<p>微零微貌似挂了，所以仿了一个应急。<br/></p>
+<div style="line-height:1em;">
+<p  style="color:red">微零微换域名又上线了：jihuowin.com，当然你也可以继续使用本站：ikms.eu.org<br/></p>
 </div>
 <div style="line-height:2.5em;">
 <p>
