--- a/docker/index.html
+++ b/docker/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<link rel="shortcut icon" href="./fav.png">
+<link rel="shortcut icon" href="../fav.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DockerHub 镜像加速代理</title>
@@ -85,7 +85,7 @@
 </head>
 <body>
 <div class="container">
-<center><img src="./logo.png" width="260em" style="margin-top: -25px;"><br><h1>DockerHub 镜像加速代理</h1></center>
+<center><img src="../logo.png" width="260em" style="margin-top: -25px;"><br><h1>DockerHub 镜像加速代理</h1></center>
 <h3>设置 registry mirror</h3>
 <pre><code>
 sudo tee /etc/docker/daemon.json &lt;&lt;EOF
