--- a/docker/index.html
+++ b/docker/index.html
@@ -102,7 +102,9 @@ docker pull _/hello-world</code><button class="copy-button" onclick="copyCode(th
 <h4 style="font-weight: 400;">替换为下面的加速拉取镜像命令：</h4>
 <pre><code>
 docker pull docker.anyhub.us.kg/_/hello-world</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
-<center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.niege.us.kg" class="custom-button">GITHUB PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE LINUX.DO</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
+
+<center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.anyhub.us.kg" class="custom-button">GITHUB PROXY</a> | <a href="https://pixiv.anyhub.us.kg" class="custom-button">PIXIV IMAGES PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE CODE</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
+
 </div>
 <script>
         function copyCode(button) {
