--- a/docker/index.html
+++ b/docker/index.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="https://ikms.eu.org/docker/fav.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DockerHub 镜像加速代理</title>
+<title>DockerHub 镜像加速</title>
 <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -14,7 +14,7 @@
             padding: 30px;
         }
         .container {
-            max-width: 1080px;
+            max-width: 1320px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -86,6 +86,7 @@
 <body>
 <div class="container">
 <center><img src="https://ikms.eu.org/docker/logo.png" width="260em" style="margin-top: -25px;"><br><h1>DockerHub 镜像加速代理</h1></center>
+<div style="max-width: 1080px;margin: auto;">
 <h3>设置 registry mirror</h3>
 <pre><code>
 sudo tee /etc/docker/daemon.json &lt;&lt;EOF
@@ -102,7 +103,7 @@ docker pull _/hello-world</code><button class="copy-button" onclick="copyCode(th
 <h4 style="font-weight: 400;">替换为下面的加速拉取镜像命令：</h4>
 <pre><code>
 docker pull docker.anyhub.us.kg/_/hello-world</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
-
+</div>
 <center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.anyhub.us.kg" class="custom-button">GITHUB PROXY</a> | <a href="https://pixiv.anyhub.us.kg" class="custom-button">PIXIV IMAGES PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE CODE</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
 
 </div>
