--- a/github/index.html
+++ b/github/index.html
@@ -176,7 +176,7 @@
 </style>
 </head>
 <body class="flex">
-<img src="https://gcore.jsdelivr.net/gh/love2wind/love2wind.github.io/gh-proxy/fav.png" width="180px">
+<img src="https://gcore.jsdelivr.net/gh/love2wind/love2wind.github.io/gh-proxy/fav.png" width="180px" style="margin-top: -10px;">
 
 <h1 style="font-size: 2em;margin-bottom: .5em;color: #9d0e06;font-weight: 900;" fr-bold-cf60c8ec="">GitHub 文件加速</h1>
 <form action="./" method="get" style="padding-bottom: 20px;display: flex;flex-wrap: nowrap;align-items: center;justify-content: space-between;" target="_blank" onsubmit="toSubmit(event)">
