--- a/ghcr/index.html
+++ b/ghcr/index.html
@@ -30,7 +30,7 @@
         pre {
             background: #2d2d2d;
             color: #f8f8f2;
-            padding: 20px;
+            padding: 30px 20px 20px;
             border-radius: 5px;
             overflow-x: auto;
             position: relative;
@@ -85,7 +85,7 @@
 </head>
 <body>
 <div class="container">
-<center><img src="https://img1.anyhub.us.kg/i/2024/f55c629d78d77fef.png" width="300em" style="margin-top: -25px;"><br><h1>GHCR.IO 镜像加速</h1></center>
+<center><img src="https://img1.anyhub.us.kg/i/2024/f55c629d78d77fef.png" width="500em" style="margin-top: -25px;"><br><h1>GHCR.IO 镜像加速</h1></center>
 <div style="max-width: 1080px;margin: auto;">
 <center><p style="color:blue">仅CN IP可以使用</p></center>
 <h3>使用 docker hub proxy</h3>
