--- a/docker/index.html
+++ b/docker/index.html
@@ -85,7 +85,8 @@
 </head>
 <body>
 <div class="container">
-<center><img src="https://ikms.eu.org/docker/logo.png" width="260em" style="margin-top: -25px;"><br><h1>DockerHub 镜像加速代理</h1></center>
+<center><img src="https://ikms.eu.org/docker/logo.png" width="260em" style="margin-top: -25px;"><br><h1>DockerHub 镜像加速</h1>
+<p><a href="https://ghcr.anyhub.us.kg/" class="" style="text-decoration: none; color: blue; font-weight: 900;">ghcr.io加速在这里</a></p></center>
 <div style="max-width: 1080px;margin: auto;">
 <h3>设置 registry mirror</h3>
 <pre><code>
