--- a/docker/index.html
+++ b/docker/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<link rel="shortcut icon" href="https://ikms.eu.org/docker/fav.png">
+<!--<link rel="shortcut icon" href="https://ikms.eu.org/docker/fav.png">-->
+<link rel="shortcut icon" href="https://ikms.eu.org/docker/logo.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DockerHub 镜像加速</title>
