--- a/android.html
+++ b/android.html
@@ -17,18 +17,18 @@ sup {font-size:0.5em;color:#00AEED;}
 * {font-family:"Microsoft Yahei";font-weight:lighter;text-decoration:none;}
 </style>
 </head>
-<body style="text-align: center;">
+<body style="text-align: center;margin-top:6em"">
 <table cellspacing="0" cellpadding="0">
 <tr>
 <td>
 <h1>安卓手机自建 KMS 服务器（无需 Root）</h1>
 <br>
-<h3>1. 下载并安装 v0v.bid 提供的安卓版 KMS 服务器软件 <a href="./files/kms.apk">点击下载</a></h3>
+<h3>1. 下载并安装安卓版 KMS 服务器软件 <a href="https://cdn.jsdelivr.net/iougemini/iougemini.github.io/files/kisskms.apk">点击下载</a></h3>
 <h3>2. 确保手机与需要激活的电脑连接同一 WIFI 网络 (或在同一局域网内)，启动软件</h3>
 <h3>3. 点击 [启动服务器]，查看软件内显示的 [IP 地址]</h3>
 <h3>4. 使用如下代码即可激活你手机所在局域网内的所有 Windows 系统和 office 套件 (注意替换为自己的 IP 地址)</h3>
 <h3>命令提示符(管理员)：<span style="color:red">slmgr /skms 192.168.1.XXX && slmgr /ato</span></h3>
-<!--<img src="./er.png" />-->
+<img width="180px" src="/img/er.png">
 <p>Linux / Windows 系统自建KMS服务器请访问：</p>
 <p>https://github.com/dylanbai8/kmspro</p>
 <p>
