--- a/more.html
+++ b/more.html
@@ -28,7 +28,7 @@ sup {font-size:0.5em;color:#00AEED;}
     })
 </script>
 </head>
-<body style="text-align: center;">
+<body style="text-align: center;margin-top:6em;">
 <table cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td>
