--- a/docker/index.html
+++ b/docker/index.html
@@ -87,13 +87,13 @@
 <body>
 <div class="container">
 <center><img src="https://ikms.eu.org/docker/logo.png" width="260em" style="margin-top: -25px;"><br><h1>DockerHub 镜像加速</h1>
-<p><a href="https://ghcr.anyhub.us.kg/" class="" style="text-decoration: none; color: blue; font-weight: 900;">ghcr.io加速在这里</a></p></center>
+<p><a href="https://ghcr.everyhub.top/" class="" style="text-decoration: none; color: blue; font-weight: 900;">ghcr.io加速在这里</a></p></center>
 <div style="max-width: 1080px;margin: auto;">
 <h3>设置 registry mirror</h3>
 <pre><code>
 sudo tee /etc/docker/daemon.json &lt;&lt;EOF
 {
-    "registry-mirrors": ["https://docker.anyhub.us.kg"]
+    "registry-mirrors": ["https://docker.everyhub.top"]
 }
 EOF</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
 <pre><code>
@@ -104,9 +104,9 @@ sudo systemctl daemon-reload && sudo systemctl restart docker</code><button clas
 docker pull _/hello-world</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
 <h4 style="font-weight: 400;">替换为下面的加速拉取镜像命令：</h4>
 <pre><code>
-docker pull docker.anyhub.us.kg/_/hello-world</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
+docker pull docker.everyhub.top/_/hello-world</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
 </div>
-<center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.anyhub.us.kg" class="custom-button">GITHUB PROXY</a> | <a href="https://pixiv.anyhub.us.kg" class="custom-button">PIXIV IMAGES PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE CODE</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
+<center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.everyhub.top" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.everyhub.top" class="custom-button">GITHUB PROXY</a> | <a href="https://pixiv.everyhub.top" class="custom-button">PIXIV IMAGES PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE CODE</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
 
 </div>
 <script>
