--- a/ghcr/index.html
+++ b/ghcr/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<link rel="shortcut icon" href="https://img1.anyhub.us.kg/i/2024/f55c629d78d77fef.png">
+<link rel="shortcut icon" href="https://img1.everyhub.top/i/2024/f55c629d78d77fef.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DockerHub 镜像加速</title>
@@ -85,16 +85,16 @@
 </head>
 <body>
 <div class="container">
-<center><img src="https://img1.anyhub.us.kg/i/2024/f55c629d78d77fef.png" width="500em" style="margin-top: -25px;"><br><h1>GHCR.IO 镜像加速</h1></center>
+<center><img src="https://img1.everyhub.top/i/2024/f55c629d78d77fef.png" width="500em" style="margin-top: -25px;"><br><h1>GHCR.IO 镜像加速</h1></center>
 <div style="max-width: 1080px;margin: auto;">
 <center><p style="color:blue">仅CN IP可以使用</p></center>
 <h3>使用 docker hub proxy</h3>
 <h4 style="font-weight: 400;">将原拉取镜像命令：</h4>
 <pre><code>docker pull ghcr.io/helloworld/helloworld</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
 <h4 style="font-weight: 400;">替换为下面的加速拉取镜像命令：</h4>
-<pre><code>docker pull ghcr.anyhub.us.kg/helloworld/helloworld</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
+<pre><code>docker pull ghcr.everyhub.top/helloworld/helloworld</code><button class="copy-button" onclick="copyCode(this)">复制代码</button></pre>
 </div>
-<center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.anyhub.us.kg" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.anyhub.us.kg" class="custom-button">GITHUB PROXY</a> | <a href="https://pixiv.anyhub.us.kg" class="custom-button">PIXIV IMAGES PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE CODE</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
+<center style="margin-top: 2rem;"><p style="color: #2a7903;font-size: 14px;font-weight: 500;">本站使用Cloudflare CDN进行加速，想要获得更好的速度，可以使用<a href="https://github.com/XIU2/CloudflareSpeedTest" class="" style="text-decoration: none; color: #2a7903; font-weight: 900;">优选IP</a>。</p><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="custom-button">COPYRIGHT BY-NC-SA 4.0</a> | <a href="https://ikms.eu.org" class="custom-button">KMS ACTIVATION</a> | <a href="https://docker.everyhub.top" class="custom-button">DOCKER HUB PROXY</a> | <a href="https://git.everyhub.top" class="custom-button">GITHUB PROXY</a> | <a href="https://pixiv.everyhub.top" class="custom-button">PIXIV IMAGES PROXY</a> | <a href="https://linux.do/t/topic/107726" class="custom-button">SOURCE CODE</a> | <a href="https://cloudflare.com" class="custom-button">POWERED CLOUDFLARE</a></center>
 
 </div>
 <script>
