--- a/ghcr/index.html
+++ b/ghcr/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<link rel="shortcut icon" href="https://img1.everyhub.top/i/2024/f55c629d78d77fef.png">
+<link rel="shortcut icon" href="https://gcore.jsdelivr.net/gh/love2wind/love2wind.github.io/gh-proxy/fav.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>DockerHub 镜像加速</title>
@@ -85,7 +85,7 @@
 </head>
 <body>
 <div class="container">
-<center><img src="https://img1.everyhub.top/i/2024/f55c629d78d77fef.png" width="500em" style="margin-top: -25px;"><br><h1>GHCR.IO 镜像加速</h1></center>
+<center><img src="https://gcore.jsdelivr.net/gh/love2wind/love2wind.github.io/gh-proxy/fav.png" width="500em" style="margin-top: -25px;"><br><h1>GHCR.IO 镜像加速</h1></center>
 <div style="max-width: 1080px;margin: auto;">
 <center><p style="color:blue">仅CN IP可以使用</p></center>
 <h3>使用 docker hub proxy</h3>
