--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="keywords" content="KMS激活服务器,windows激活工具,windows激活教程,win10激活工具,Server2022激活,win11激活,win10激活,win8激活工具,win7激活工具,office2022激活,office2019激活工具,office365激活教程,office激活工具,系统激活教程,v0v.bid,微零微">
 <meta name="description" content="[IKMS]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活">
 <title>[IKMS]-Windows/Office全系列激活教程-KMS在线激活-KMS激活服务器-Windows11一句命令永久激活-Windows10一句命令永久激活</title>
-<link rel="shortcut icon" href="/img/windows.svg">
-<link rel="bookmark" href="/img/windows.svg">
+<link rel="shortcut icon" href="/img/ikmslogo.png">
+<link rel="bookmark" href="/img/ikmslogo.png">
 <style>
 h1 {font-size:3em;line-height:1em;}
 h4 {font-size:1.2em;font-weight:bold;}
@@ -38,7 +38,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <div style="margin-top:2em;margin-bottom:2em;">
 <h3>命令提示符(管理员)：<span id="copy" style="color:red">slmgr /skms s.ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
 </div>
-<img src="/img/logo.webp" width="200em">
+<img src="/img/ikms" width="250em">
 <div style="line-height:1em;">
 <p  style="color:red">微零微换域名又上线了：jihuowin.com，当然你也可以继续使用本站：ikms.eu.org<br/></p>
 </div>
