--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ sup {font-size:0.5em;color:#00AEED;}
 <div style="margin-top:2em;margin-bottom:2em;">
 <h3>命令提示符(管理员)：<span id="copy" style="color:red">slmgr /skms s.ikms.eu.org &amp;&amp; slmgr /ato</span></h3>
 </div>
-<img src="/img/ikms" width="250em">
+<img src="/img/ikms.png" width="250em">
 <div style="line-height:1em;">
 <p  style="color:red">微零微换域名又上线了：jihuowin.com，当然你也可以继续使用本站：ikms.eu.org<br/></p>
 </div>
